--- a/css/main.css
+++ b/css/main.css
@@ -169,11 +169,26 @@ body {
     background-color: var(--baby-blue);
     margin: 0;
     padding: 3rem 4rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.intro-text img {
+    position: absolute;
+    top: 6%;
+    right: 15%;
+    width: 40%;
+    min-width: 10px;
+    max-width: 300px;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .intro-text h2,
 .intro-text p {
+    position: relative;
     margin: 0;
+    z-index: 10;
 }
 
 @keyframes marquee {
@@ -229,6 +244,7 @@ body {
 .sm-contenedor {
     background-color: var(--secondary-color);
     margin: 8rem;
+    position: relative;
 }
 
 @media (max-width: 768px) {
@@ -243,6 +259,16 @@ body {
     object-fit: cover;
     font-family: 'Space Grotesk', sans-serif;
     margin-bottom: 3rem;
+}
+
+.sm-contenedor img:nth-child(2) {
+    position: absolute;
+    width: 80%;
+    max-width: 900px;
+    right: -10%;
+    bottom: -11rem;
+    z-index: 1;
+    pointer-events: none;
 }
 
 .description {
@@ -308,13 +334,19 @@ body {
 }
 
 @media (max-width: 768px) {
+    .sm-contenedor img:nth-child(2) {
+    width: 80%;
+    max-width: 900px;
+    bottom: -5rem;
+    }
+
     .tag {
         font-size: 0.8rem;
         padding: 0.5rem 0.75rem;
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1440px) {
     .sm-contenedor p {
         padding: 1rem 3rem 0 3rem;
     }
@@ -327,6 +359,12 @@ body {
         font-size: 1.25rem;
         padding: 1rem 1.5rem;
     }
+}
+
+.sm-contenedor .description,
+.sm-contenedor .tags {
+    position: relative;
+    z-index: 2;
 }
 
 /* --- ESPECIALIZACIONES --- */
@@ -833,9 +871,21 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+}
+
+.blogs img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
 }
 
 .blogs h2 {
+    position: relative;
     margin: 0;
     margin-bottom: 2rem;
     color: var(--secondary-color);
@@ -843,6 +893,7 @@ body {
 }
 
 .blogs > div {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -851,6 +902,7 @@ body {
 }
 
 .blog-posts {
+    position: relative;
     display: flex;
     overflow: hidden;
     scroll-behavior: smooth;
@@ -915,6 +967,7 @@ body {
 }
 
 .blog-navigation {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
