--- a/css/main.css
+++ b/css/main.css
@@ -769,6 +769,7 @@ body {
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    border: none;
 }
 
 .nav-pj {
